Finalizado configuração de área Publica e Restrita

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -361,10 +361,10 @@ z-index: 999;}
 }
 
 .single-promo:hover {color: #fff;background: #222;}
-.promo1 { background:#5a88ca;}
-.promo2 { background:#ffd900;}
-.promo3 { background:#fa8072;}
-.promo4 { background:#4abebd;}
+.promo1 { background:#0d6efd;}
+.promo2 { background:#fd7e14;}
+.promo3 { background:#198754;}
+.promo4 { background:#ffc107;}
 .section-title {
   font-family: "Raleway",sans-serif;
   font-size: 50px;
